--- a/addons/amxmodx/configs/coins_collector.cfg
+++ b/addons/amxmodx/configs/coins_collector.cfg
@@ -135,3 +135,7 @@ cc_coin_cooldown_global "0"
 // Персональная (для каждого игрока) задержка между выпадением монет (т.е. монеты не выпадают из одного игрока чаще одного раза в # секунд). Действует в пределах одной карты.
 // Default: "15"
 cc_coin_cooldown_personal "15"
+
+// При значении "1" убийца видит и поднимает только монеты из собственных жертв, при значении "0" все игроки видят и поднимают любые монеты
+// Default: "0"
+cc_coin_killer_mode "0"
