--- a/addons/amxmodx/configs/coins_collector.cfg
+++ b/addons/amxmodx/configs/coins_collector.cfg
@@ -30,6 +30,7 @@ cc_sql_table "coins_collector"
 // [1] AES Fork 0.5.9.1: https://dev-cs.ru/resources/362/
 // [2] Army Ranks Ultimate 20.06.06: https://fungun.net/shop/?p=show&id=1
 // [3] CMSStats Ranks 2.1.4: https://cs-games.club/index.php?resources/cmsstats-ranks.14/
+// [4] Опыт из Army Ranks Ultimate 20.06.06, очки ANEW из BonusMenu RBS 20.06.06 https://fungun.net/shop/?p=show&id=106
 // Default: "1"
 cc_rank_system_type "1"
 
